--- a/src/app/component/footer/footer.component.html
+++ b/src/app/component/footer/footer.component.html
@@ -11,6 +11,10 @@
         <ul>
 
           <li>
+            <a routerLink="/all/brands" class="nav-link">Storefronts</a>
+          </li>
+
+          <li>
             <a routerLink="/vendor/signup/first">Signup As A Partner</a>
           </li>
 
