--- a/src/app/component/level-one/level-one.component.html
+++ b/src/app/component/level-one/level-one.component.html
@@ -8,17 +8,12 @@
 
           <p class="fw-bold mt-5 fs-5" *ngIf="loading">Loading...</p>
 
+
           <ul class="mt-4 text-left" *ngIf="leaderboards && leaderboards.length > 0">
             <li *ngFor="let item of leaderboards" class="text-left mb-2">
               <a style="text-align: left;" class="text-left btn btn-link text-dark text-decoration-none font_family"
                 routerLink="/discover/brands/level/two/{{ item.Id }}">{{ item.lb_name }}
-
-
               </a>
-
-              <div class="text-secondary">
-                Subscribers: {{ item.buyers_no ?? 0 }}
-              </div>
 
               <div *ngIf="item.discount >= 5 && item.discount <= 15" class="discount-light-green-level">Highest
                 Discount:
@@ -35,7 +30,12 @@
                 {{  item.discount }}%
               </div>
 
-              <div *ngIf="item.discount > 50" class="discount-dark-green-level">Highest Discount: {{  item.discount }}%
+              <div *ngIf="item.discount > 50" class="discount-dark-green-level">
+                Highest Discount: {{  item.discount }}%
+              </div>
+
+              <div class="text-secondary fs-6 font_family mt-2">
+                {{ item.buyers_no ?? 0 }} Subscribers
               </div>
 
             </li>
