--- a/src/app/component/preview-storefront/preview-storefront.component.html
+++ b/src/app/component/preview-storefront/preview-storefront.component.html
@@ -40,7 +40,8 @@
 
     <div class="row mt-2">
       <div class="col-md-12">
-        <a href="#" type="button" class="btn btn-warning btn-sm mb-3">&nbsp; Email Us</a>
+        <a target="_blank" href="mailto:{{ vendorData.brand_email }}" class="btn btn-warning btn-sm mb-3">&nbsp; Email
+          Us</a>
         <button type="button" class="btn btn-warning btn-sm mb-3">&nbsp; Connect With
           Us</button>
         <a routerLink="/view/leaderboards/{{ slug }}" type="button" class="btn btn-warning btn-sm mb-3">&nbsp;
@@ -82,12 +83,12 @@
 
     <div class="row" style="margin-top: 80px;">
       <div class="col-md-12">
-        <h2 class="fs-1 fw-bold mb-4 heading"> The Products </h2>
-        <div class="devider-left" style="border-width: 4px;"></div>
+        <h2 class="fs-1 fw-bold heading"> The Products </h2>
+        <div class="devider-left mt-1" style="border-width: 4px;"></div>
       </div>
 
     </div>
-    <div class="row product mt-4">
+    <div class="row product mt-4" *ngIf="vendorData?.products?.length > 0">
 
       <div class="col-md-4 mb-3" *ngFor="let item of vendorData.products">
         <a routerLink="/u/product/{{ item.puniq_id }}"><img *ngIf="item.image != ''"
@@ -105,23 +106,25 @@
       </div>
     </div>
 
+    <p *ngIf="vendorData?.products?.length == 0">No product for now.</p>
+
     <!------------------Discounts------------------------------->
 
     <div class="row mb-4 mt-5" style="margin-top: 80px;">
       <div class="col-md-12">
         <h2 class="fs-4 fw-bold heading"> Discount Codes </h2>
-        <div class="devider-left" style="border-width: 4px;"></div>
+        <div class="devider-left mt-1" style="border-width: 4px;"></div>
 
       </div>
     </div>
-    <div class="row product">
+    <div class="row product" *ngIf="vendorData?.discount_products?.length > 0">
       <div class="col-md-4 mb-3" *ngFor="let item of vendorData.discount_products">
-        <a routerLink="/preview/discount/{{ item.id }}"><img *ngIf="item.image != ''"
+        <a routerLink="/u/discount/{{ item.id }}"><img *ngIf="item.image != ''"
             [src]="'https://administrator.goodyellowco.com/uploads/'+item.image" class="img-fluid"></a>
-        <a routerLink="/preview/discount/{{ item.id }}"><img *ngIf="item.image == ''"
+        <a routerLink="/u/discount/{{ item.id }}"><img *ngIf="item.image == ''"
             src="https://cdn-icons-png.flaticon.com/512/149/149635.png" class="img-fluid"></a>
         <!-- <p class="fw-bold fs-6 mt-3 text-danger">{{ item.publish == 1 ? 'Published': 'Draft' }}</p> -->
-        <a routerLink="/preview/discount/{{ item.id }}">
+        <a routerLink="/u/discount/{{ item.id }}">
           <h4 class="fs-4 fw-bold mt-4">{{ item.name }}</h4>
         </a>
         <p class="fs-5">${{ item.price }} </p>
@@ -130,6 +133,8 @@
 
       </div>
     </div>
+
+    <p *ngIf="vendorData?.discount_products?.length == 0">No discount code for now.</p>
 
   </div>
 </div>
