--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,7 +37,7 @@ a {
   color: #ccc !important;
   font-weight: bold;
   padding: 16px;
-  font-size: 22px;
+  font-size: 14px;
   text-align: center;
 
 }
@@ -46,7 +46,7 @@ a {
   background-color: #D8F9C0 !important;
   color: #ffffff !important;
   font-weight: bold;
-  padding: 16px;
+  padding: 14px;
   font-size: 22px;
   text-align: center;
 
@@ -56,7 +56,7 @@ a {
   background-color: #AEF942 !important;
   color: #ffffff !important;
   font-weight: bold;
-  padding: 16px;
+  padding: 14px;
   font-size: 22px;
   text-align: center;
 
@@ -66,56 +66,56 @@ a {
   background-color: #296603 !important;
   color: #ffffff !important;
   font-weight: bold;
-  padding: 16px;
+  padding: 14px;
   font-size: 22px;
   text-align: center;
 
 }
 
 .discount-dark-green-level {
-  background-color: #296603 !important;
+  background-color: #317003 !important;
   color: #ffffff !important;
   font-weight: bold;
   padding: 8px;
-  font-size: 16px;
+  font-size: 14px;
   text-align: center;
   // width: 100px;
-  float: right;
+
 }
 
 .discount-dark-green-second-level {
-  background-color: #AEF942 !important;
+  background-color: #64d513 !important;
   color: #ffffff !important;
   font-weight: bold;
   padding: 8px;
-  font-size: 16px;
+  font-size: 14px;
   text-align: center;
   // width: 100px;
-  float: right;
+
 
 }
 
 .discount-light-green-second-level {
-  background-color: #D8F9C0 !important;
+  background-color: #9bdf6a !important;
   color: #ffffff !important;
   font-weight: bold;
   padding: 8px;
-  font-size: 16px;
+  font-size: 14px;
   text-align: center;
   // width: 100px;
-  float: right;
+
 
 }
 
 .discount-light-green-level {
-  background-color: #F2F9DC !important;
+  background-color: #daef99 !important;
   color: #ffffff !important;
   font-weight: bold;
   padding: 8px;
-  font-size: 16px;
+  font-size: 14px;
   text-align: center;
   // width: 100px;
-  float: right;
+
 
 }
 
