--- a/src/app/buyer/checkout/checkout.component.html
+++ b/src/app/buyer/checkout/checkout.component.html
@@ -8,12 +8,19 @@
           <div style="border-bottom: 5px solid #FFE01D; width: 400px; margin: 0 auto;"></div>
 
           <div class="form-group mt-4 mb-3">
+            <div class="form-group mb-3">
+              <label>
+                Full Name*
+              </label>
+              <input [(ngModel)]="full_name" type="text" class="form-control" placeholder="John Doe">
+            </div>
             <label>
               Shipping Address/Delivery Address*
             </label>
             <textarea [(ngModel)]="address" rows="4" class="form-control"
-              placeholder="*Note: Your full address with street no, name, PIN/Postal code, State, City etc."></textarea>
-            <span class="fs-6 font_family">*Note: Your full address with street no, name, PIN/Postal code, State,
+              placeholder="*Note: Your full address including street no, name, PIN/Postal code, State, City etc."></textarea>
+            <span class="fs-6 text-success fw-bold">*Note: Your full address including street no, name, PIN/Postal code,
+              State,
               City etc.</span>
           </div>
 
@@ -33,7 +40,7 @@
 
           <hr />
 
-          <h1 class="fs-5 fw-bold text-center mb-1 font_family">Pay With Credit Card/Debit Card</h1>
+          <h1 class="fs-5 fw-bold text-center mb-1 font_family">🔒 Pay With Credit Card/Debit Card</h1>
           <div style="border-bottom: 5px solid #FFE01D; width: 400px; margin: 0 auto;"></div>
 
           <div class="form-group mt-3 mb-3">
@@ -65,8 +72,10 @@
           </div>
 
           <div class="d-grid gap-2 mx-auto col-6 mt-4">
-            <button [disabled]="disabled" type="button" class="btn btn-warning btn-lg" (click)="checkout()">Pay
+            <button [disabled]="disabled" type="button" class="btn btn-warning btn-lg" (click)="checkout()">🔒 Pay
               ${{ brands.total }}</button>
+
+
           </div>
 
 
