--- a/src/app/component/edit-product/edit-product.component.html
+++ b/src/app/component/edit-product/edit-product.component.html
@@ -106,13 +106,13 @@
           </div>
 
           <div class="form-check mt-3">
-            <input value="1" class="form-check-input" type="checkbox" [(ngModel)]="excl_discount" role="switch"
-              id="flexSwitchCheckDefault">
+            <input class="form-check-input" type="checkbox" [checked]="excl_discount" [(ngModel)]="excl_discount"
+              role="switch" id="flexSwitchCheckDefault">
             <label class="form-check-label" for="flexSwitchCheckDefault">Exclusive Discount On Good Yellow?</label>
           </div>
           <div class="form-check">
-            <input class="form-check-input" type="checkbox" value="1" [(ngModel)]="excl_prod" role="switch"
-              id="flexSwitchCheckChecked">
+            <input class="form-check-input" type="checkbox" [checked]="excl_prod == 'true'" [(ngModel)]="excl_prod"
+              role="switch" id="flexSwitchCheckChecked">
             <label class="form-check-label" for="flexSwitchCheckChecked">Exclusive Product On Good Yellow?</label>
           </div>
 
