--- a/src/app/component/preview-product/preview-product.component.html
+++ b/src/app/component/preview-product/preview-product.component.html
@@ -23,10 +23,10 @@
 
       </div>
       <div class="col-md-5">
-        <h2 class="fs-4 fw-bold heading">{{ product.name }}</h2>
+        <h2 class="fs-4 fw-bold heading">{{ product?.name }}</h2>
         <h3 style=""><a class=" text-warning fw-bold text-decoration-none" style="cursor: pointer;"
-            routerLink="/storefront/{{ product.brand }}">
-            {{ product.brand }}</a>
+            routerLink="/storefront/{{ product?.brand }}">
+            {{ product?.brand }}</a>
         </h3>
         <h2 class="fw-normal fs-4 mt-2">${{ price }}</h2>
         <h2 class="fw-bold fs-5" style="margin-top: 6px;">Current Discount: {{ discount }}% </h2>
@@ -41,10 +41,12 @@
         </h1>
         <!-- <h3 class="fw-bold">23 Sales</h3>
         <h3 class="fw-bold" style="margin-top: -14px;">18 Different Customers</h3> -->
-        <h3 class="fs-6" *ngIf="product.exclu_discount" style="border-bottom: 4px solid #FFE01D; width: 230px;">
+        <h3 class="fs-6" *ngIf="product?.exclu_discount == 'true'"
+          style="border-bottom: 4px solid #FFE01D; width: 230px;">
           Exclusive Good Yellow
           Discount </h3>
-        <h3 class="fs-6" *ngIf="product.exclus_product" style="border-bottom: 4px solid #FFE01D; width: 200px;">
+        <h3 class="fs-6" *ngIf="product?.exclus_product == 'true'"
+          style="border-bottom: 4px solid #FFE01D; width: 200px;">
           Exclusively On Good Yellow</h3>
 
         <div class="mt-4">
@@ -71,7 +73,7 @@
         </div>
         <p style="text-decoration: underline; margin-top: 30px;">Important Details</p>
         <p class="mt-3">
-          {{ product.important_details }}
+          {{ product?.important_details }}
         </p>
 
         <h4 class="font_family mt-4">Description</h4>
