--- a/src/app/component/public-brand-video/public-brand-video.component.html
+++ b/src/app/component/public-brand-video/public-brand-video.component.html
@@ -12,13 +12,14 @@
             <div class="col-md-12">
 
               <p class="fw-bold">
-                <a [href]="data" target="_blank" class="btn btn-link text-dark">{{ data }}</a>
+                <a [href]="data" target="_blank" class="btn btn-link text-dark">{{ data != 'null' ? data : '' }}</a>
               </p>
             </div>
           </div>
 
           <div class="d-grid gap-2 d-md-flex justify-content-md-end mt-4">
-            <a routerLink="/vendor-storefront" class="btn btn-warning me-md-2" type="button">Return To Storefront</a>
+            <a routerLink="/vendor-storefront" class="btn btn-warning me-md-2" type="button"
+              *ngIf="!buyer_seller_id">Return To Storefront</a>
           </div>
 
         </div>
