--- a/src/app/component/public-story/public-story.component.html
+++ b/src/app/component/public-story/public-story.component.html
@@ -10,13 +10,14 @@
 
           <div class="row mt-5">
             <div class="col-md-12">
-              <p class="fs-6" [innerHtml]="data"></p>
+              <p class="fs-6">{{ data != 'null' ? data : '' }}</p>
             </div>
 
           </div>
 
           <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-            <a routerLink="/vendor-storefront" class="btn btn-warning me-md-2" type="button">Return To Storefront</a>
+            <a routerLink="/vendor-storefront" class="btn btn-warning me-md-2" type="button"
+              *ngIf="!buyer_seller_id">Return To Storefront</a>
           </div>
 
         </div>
