--- a/src/styles.scss
+++ b/src/styles.scss
@@ -43,21 +43,21 @@ a {
 }
 
 .discount-light-green-second {
-  background-color: #D8F9C0 !important;
+  background-color: #bee1a4 !important;
   color: #ffffff !important;
   font-weight: bold;
-  padding: 14px;
-  font-size: 22px;
+  padding: 8px;
+  font-size: 16px;
   text-align: center;
 
 }
 
 .discount-dark-green-second {
-  background-color: #AEF942 !important;
+  background-color: #b3f980 !important;
   color: #ffffff !important;
   font-weight: bold;
-  padding: 14px;
-  font-size: 22px;
+  padding: 8px;
+  font-size: 16px;
   text-align: center;
 
 }
