--- a/src/app/buyer/login/login.component.html
+++ b/src/app/buyer/login/login.component.html
@@ -3,8 +3,8 @@
     <div class="row h-100">
       <div class="col-md-5 mx-auto p-2 d-flex _logbox">
         <div class="box">
-          <h1 class="display-6 fw-bold text-center mb-2 heading">Log In </h1>
-          <div style="border-bottom: 5px solid #FFE01D; width: 120px; margin: 0 auto;"></div>
+          <h1 class="display-6 fw-bold text-center mb-2 heading">Member Log In </h1>
+          <div style="border-bottom: 5px solid #FFE01D; width: 220px; margin: 0 auto;"></div>
 
 
           <div class="form-group">
