--- a/src/app/component/discount-list-details-level-two/discount-list-details-level-two.component.html
+++ b/src/app/component/discount-list-details-level-two/discount-list-details-level-two.component.html
@@ -10,7 +10,38 @@
           <ul class="mt-4 text-left" *ngIf="discounts && discounts.length > 0">
             <li *ngFor="let item of discounts" class="text-left mb-2">
               <a style="text-align: left;" class="text-left btn btn-link text-dark text-decoration-none"
-                routerLink="/discount/list/details/level/three/{{ id }}/{{ item.id }}">{{ item.lb_two_name }}</a>
+                routerLink="/discount/list/details/level/three/{{ id }}/{{ item.Id }}/{{ min }}/{{ max }}">{{ item.lb_two_name }}</a>
+
+
+
+              <div *ngIf="item.ave_discount >= 5 && item.ave_discount <= 15" class="discount-dark-green-second-level">
+                Highest
+                Discount:
+                {{  item.ave_discount | number : '1.1-2' }}%
+              </div>
+
+              <div *ngIf="item.ave_discount >= 16 && item.ave_discount <= 30" class="discount-dark-green-second-level">
+                Highest
+                Discount:
+                {{  item.ave_discount | number : '1.1-2' }}%
+              </div>
+
+              <div *ngIf="item.ave_discount >= 30 && item.ave_discount <= 50" class="discount-dark-green-second-level">
+                Highest
+                Discount:
+                {{  item.ave_discount | number : '1.1-2' }}%
+              </div>
+
+              <div *ngIf="item.ave_discount > 50" class="discount-dark-green-level">
+                Highest Discount: {{  item.ave_discount | number : '1.1-2' }}%
+              </div>
+
+              <!-- <div class="text-secondary fs-6 font_family mt-2">
+                {{ item.buyers_no ?? 0 }} Subscribers
+              </div> -->
+
+
+
             </li>
           </ul>
 
