--- a/src/app/component/discount-list-details/discount-list-details.component.html
+++ b/src/app/component/discount-list-details/discount-list-details.component.html
@@ -4,11 +4,11 @@
       <div class="col-md-6 mx-auto p-2 d-flex _logbox">
         <div class="boxx mt-4">
 
-          <h1 class="display-6 fw-bold mb-1 heading">{{ title }}</h1>
-          <div style="border-bottom: 5px solid #FFE01D; width: 300px;"></div>
+          <!-- <h1 class="display-6 fw-bold mb-1 heading">{{ title }}</h1>
+          <div style="border-bottom: 5px solid #FFE01D; width: 300px;"></div> -->
 
           <div class="">
-            <h4 class="text-secondary fs-6 fw-bold mt-4 HeroNew">
+            <h4 class="text-black fs-6 fw-bold mt-4 HeroNew">
               Click on a Category to view the Leaderboard that contains Brands that are currently offering a Product or
               Discount Code.
             </h4>
@@ -19,7 +19,42 @@
           <ul class="mt-4 text-left" *ngIf="discounts && discounts.length > 0">
             <li *ngFor="let item of discounts" class="text-left mb-2">
               <a style="text-align: left;" class="text-left btn btn-link text-dark text-decoration-none"
-                routerLink="/discount/list/details/level/two/{{ id }}/{{ item.id }}">{{ item.lb_name }}</a>
+                routerLink="/discount/list/details/level/two/{{ id }}/{{ item.Id }}/{{ min }}/{{ max }}">{{ item.lb_name }}</a>
+
+
+              <div *ngIf="item.ave_discount >= 5 && item.ave_discount <= 15" class="discount-dark-green-second-level">
+                Highest
+                Discount:
+                {{  item.ave_discount }}%
+              </div>
+
+              <div *ngIf="item.ave_discount >= 16 && item.ave_discount <= 30" class="discount-dark-green-second-level">
+                Highest
+                Discount:
+                {{  item.ave_discount }}%
+              </div>
+
+              <div *ngIf="item.ave_discount >= 30 && item.ave_discount <= 50" class="discount-dark-green-second-level">
+                Highest
+                Discount:
+                {{  item.ave_discount }}%
+              </div>
+
+              <div *ngIf="item.ave_discount > 50" class="discount-dark-green-level">
+                Highest Discount: {{  item.ave_discount }}%
+              </div>
+
+              <!-- <div class="text-secondary fs-6 font_family mt-2">
+                {{ item.buyers_no ?? 0 }} Subscribers
+              </div> -->
+
+
+
+
+
+
+
+
             </li>
           </ul>
 
