--- a/src/app/component/discover-brands/discover-brands.component.html
+++ b/src/app/component/discover-brands/discover-brands.component.html
@@ -7,6 +7,9 @@
     </div>
 
     <div class="row mt-4">
+      <div class="col-md-12 mt-4">
+        <a routerLink="/discount/list" class="btn btn-warning btn-lgg">Offer Great Discounts</a>
+      </div>
       <div class="col-md-4 mt-4">
         <a routerLink="/discover/brands/level/one/1/brands" class="btn btn-warning btn-lgg">Sell Awesome Products</a>
       </div>
@@ -21,9 +24,7 @@
         <a routerLink="/discover/brands/level/one/2/causes" class="btn btn-warning btn-lgg">Donate Time Or Money To
           Causes</a>
       </div>
-      <div class="col-md-8 mt-4">
-        <a routerLink="/discount/list" class="btn btn-warning btn-lgg">Discount List</a>
-      </div>
+
     </div>
   </div>
 
