--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -7,7 +7,7 @@
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
+    <div class=" navbar-collapse collapse" id="navbarNav">
       <ul class="navbar-nav mx-auto">
 
         <!-- <li class="nav-item">
@@ -38,7 +38,7 @@
         </li>
 
 
-        <li class="nav-item dropdown" *ngIf="changeBuyerHeader">
+        <li class="nav-item dropdown jol" *ngIf="changeBuyerHeader">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Account
           </a>
@@ -96,3 +96,19 @@
     </div>
   </div>
 </nav>
+
+
+<div class="container-fluid" style="background-color: #FFF7C6;">
+  <div class="container" *ngIf="changeBuyerHeader">
+    <div class="row">
+      <div class="col-12 mt-2">
+        <div *ngIf="emailVerify != ''" class="alert alert-primary">
+          <span class="fw-bold text-dark">{{ emailVerify == '' ? '' : emailVerify }}</span>
+          <!-- <span class="fw-bold text-dark">
+    Resend verification to my registered email.
+  </span> -->
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
