--- a/src/app/component/home-page/home-page.component.scss
+++ b/src/app/component/home-page/home-page.component.scss
@@ -66,7 +66,7 @@
 
 .hero_sec {
   padding: 40px;
-  height: 80vh;
+  min-height: 80vh;
   // display: flex;
   // flex-direction: row;
   // justify-content: center;
