--- a/src/app/component/level-three/level-three.component.html
+++ b/src/app/component/level-three/level-three.component.html
@@ -15,22 +15,23 @@
 
 
 
-              <div *ngIf="item.discount >= 5 && item.discount <= 15" class="discount-light-green-level">Highest
+              <div *ngIf="item.discount >= 5 && item.discount <= 15" class="discount-dark-green-second-level">Highest
                 Discount:
-                {{  item.discount }}%
+                {{  item.discount | number : '1.1-2' }}%
               </div>
 
-              <div *ngIf="item.discount >= 16 && item.discount <= 30" class="discount-light-green-second-level">Highest
+              <div *ngIf="item.discount >= 16 && item.discount <= 30" class="discount-dark-green-second-level">Highest
                 Discount:
-                {{  item.discount }}%
+                {{  item.discount | number : '1.1-2' }}%
               </div>
 
               <div *ngIf="item.discount >= 30 && item.discount <= 50" class="discount-dark-green-second-level">Highest
                 Discount:
-                {{  item.discount }}%
+                {{  item.discount | number : '1.1-2' }}%
               </div>
 
-              <div *ngIf="item.discount > 50" class="discount-dark-green-level">Highest Discount: {{  item.discount }}%
+              <div *ngIf="item.discount > 50" class="discount-dark-green-level">Highest Discount:
+                {{  item.discount | number : '1.1-2' }}%
               </div>
 
               <div class="text-secondary fs-6 font_family mt-2">
