--- a/src/app/component/preview-storefront/preview-storefront.component.html
+++ b/src/app/component/preview-storefront/preview-storefront.component.html
@@ -8,7 +8,10 @@
 
         <div class="img-box">
           <div class="cover">
-            <img [src]="'https://administrator.goodyellowco.com/uploads/'+vendorData.cover_photo" class="img-fluid">
+            <img *ngIf="vendorData.cover_photo != ''"
+              [src]="'https://administrator.goodyellowco.com/uploads/'+vendorData.cover_photo" class="img-fluid">
+            <img *ngIf="vendorData.cover_photo == ''" src="http://localhost:4200/assets/imgs/default_gy.webp"
+              class="img-fluid">
           </div>
         </div>
       </div>
@@ -17,7 +20,10 @@
     <div class="row">
       <div class="col-md-3" style="z-index: 1000;">
         <div class="profile_public">
-          <img [src]="'https://administrator.goodyellowco.com/uploads/'+vendorData.brand_photo" class="img-fluid">
+          <img *ngIf="vendorData.brand_photo != ''"
+            [src]="'https://administrator.goodyellowco.com/uploads/'+vendorData.brand_photo" class="img-fluid">
+          <img *ngIf="vendorData.brand_photo == ''" src="http://localhost:4200/assets/imgs/default_gy.webp"
+            class="img-fluid">
         </div>
       </div>
       <div class="col-md-9 mt-4 main_part">
