--- a/src/app/component/home-page/home-page.component.html
+++ b/src/app/component/home-page/home-page.component.html
@@ -32,6 +32,9 @@
           <a routerLink="/discount/list" class="btn btn-warning btn-lgg">Have Great Discounts</a>
         </div>
         <div class="col-md-4 mt-4">
+          <a routerLink="/discover/brands/level/one/1/brands" class="btn btn-warning btn-lgg">Sell Awesome Products</a>
+        </div>
+        <div class="col-md-4 mt-4">
           <a routerLink="/discover/brands/level/one/4/people" class="btn btn-warning btn-lgg">Are Great For People</a>
         </div>
         <div class="col-md-4 mt-4">
