--- a/src/app/component/footer/footer.component.html
+++ b/src/app/component/footer/footer.component.html
@@ -11,11 +11,15 @@
         <ul>
 
           <li>
+
             <a routerLink="/all/brands" class="nav-link">Storefronts</a>
           </li>
 
           <li>
             <a routerLink="/vendor/signup/first">Signup As A Partner</a>
+
+            <a routerLink="/partners">Signup As A Partner</a>
+
           </li>
 
           <li>
