--- a/src/app/component/leaderboard-brands/leaderboard-brands.component.html
+++ b/src/app/component/leaderboard-brands/leaderboard-brands.component.html
@@ -19,7 +19,7 @@
                 <div class="album">
 
                   <div class="row">
-                    <div class="col-6" *ngFor="let photo of brand.brand_photos">
+                    <div class="col-12" *ngFor="let photo of brand.brand_photos">
                       <img [src]="'https://administrator.goodyellowco.com/uploads/'+photo.url"
                         class="img-fluid mb-2 mr-2">
                     </div>
@@ -55,39 +55,54 @@
               <!-- <h4 class="fw-bold HeroNew fs-6 mb-1" *ngIf="brand.dummy == '0'">{{ brand.sales }} Sales</h4>
               <h4 class="fw-bold HeroNew fs-6" *ngIf="brand.dummy == '0'">{{ brand.customers }} Different Customers</h4> -->
 
+
               <div [ngClass]="{'discount-dark-green-second': brand.discount > 5 && brand.discount < 15}"
                 *ngIf="brand.dummy == '0' && brand.discount > 5 && brand.discount < 15">
-                Highest
-                Discount:
-                {{ brand.discount }}%
-              </div>
-
-              <div [ngClass]="{'discount-light-green-second': brand.discount > 16 && brand.discount < 30}"
-                *ngIf="brand.dummy == '0' && brand.discount > 16 && brand.discount < 30">
-                Highest
-                Discount:
-                {{ brand.discount }}%
-              </div>
-
-              <div [ngClass]="{'discount-dark-green-second': brand.discount > 31 && brand.discount < 50}"
-                *ngIf="brand.dummy == '0' && brand.discount > 31 && brand.discount < 50">
-                Highest
-                Discount:
-                {{ brand.discount }}%
-              </div>
-
-              <div [ngClass]="{'discount-dark-green': brand.discount > 50}"
-                *ngIf="brand.dummy == '0' && brand.discount > 50">
-                Highest
-                Discount:
-                {{ brand.discount }}%
-              </div>
 
 
 
+                <div [ngClass]="{'discount-light-green': brand.discount >= 5 && brand.discount <= 15}"
+                  *ngIf="brand.dummy == '0' && brand.discount >= 5 && brand.discount <= 15">
+
+                  Highest
+                  Discount:
+                  {{ brand.discount }}%
+                </div>
+
+                <div [ngClass]="{'discount-light-green-second': brand.discount > 16 && brand.discount < 30}"
+                  *ngIf="brand.dummy == '0' && brand.discount > 16 && brand.discount < 30">
+
+                  <div [ngClass]="{'discount-light-green-second': brand.discount >= 16 && brand.discount <= 30}"
+                    *ngIf="brand.dummy == '0' && brand.discount >= 16 && brand.discount <= 30">
+
+                    Highest
+                    Discount:
+                    {{ brand.discount }}%
+                  </div>
 
 
-              <h4 class="fw-bold HeroNew fs-6 mb-1" *ngIf="brand.dummy == '1'">{{ brand.dummy_sales }} Sales</h4>
+                  <div [ngClass]="{'discount-dark-green-second': brand.discount > 31 && brand.discount < 50}"
+                    *ngIf="brand.dummy == '0' && brand.discount > 31 && brand.discount < 50">
+
+                    <div [ngClass]="{'discount-dark-green-second': brand.discount >= 31 && brand.discount <= 50}"
+                      *ngIf="brand.dummy == '0' && brand.discount >= 31 && brand.discount <= 50">
+
+                      Highest
+                      Discount:
+                      {{ brand.discount }}%
+                    </div>
+
+                    <div [ngClass]="{'discount-dark-green': brand.discount > 50}" *ngIf="brand.discount > 50">
+                      Highest
+                      Discount:
+                      {{ brand.discount }}%
+                    </div>
+
+
+
+
+
+                    <!-- <h4 class="fw-bold HeroNew fs-6 mb-1" *ngIf="brand.dummy == '1'">{{ brand.dummy_sales }} Sales</h4>
               <h4 class="fw-bold HeroNew fs-6" *ngIf="brand.dummy == '1'">{{ brand.dummy_customers }} Different
                 Customers</h4>
 
@@ -117,21 +132,21 @@
                 Highest
                 Discount:
                 {{ brand.dummy_discount }}%
+              </div> -->
+
+                  </div>
+
+
+
+                  <!-- // end loop -->
+                </div>
+
+
+
               </div>
 
+
             </div>
-
-
-
-            <!-- // end loop -->
           </div>
-
-
-
         </div>
-
-
       </div>
-    </div>
-  </div>
-</div>
