--- a/src/app/component/preview-storefront/preview-storefront.component.html
+++ b/src/app/component/preview-storefront/preview-storefront.component.html
@@ -10,7 +10,7 @@
           <div class="cover">
             <img *ngIf="vendorData.cover_photo != ''"
               [src]="'https://administrator.goodyellowco.com/uploads/'+vendorData.cover_photo" class="img-fluid">
-            <img *ngIf="vendorData.cover_photo == ''" src="http://localhost:4200/assets/imgs/default_gy.webp"
+            <img *ngIf="vendorData.cover_photo == ''" src="https://www.goodyellowco.com/assets/imgs/default_gy.webp"
               class="img-fluid">
           </div>
         </div>
@@ -22,7 +22,7 @@
         <div class="profile_public">
           <img *ngIf="vendorData.brand_photo != ''"
             [src]="'https://administrator.goodyellowco.com/uploads/'+vendorData.brand_photo" class="img-fluid">
-          <img *ngIf="vendorData.brand_photo == ''" src="http://localhost:4200/assets/imgs/default_gy.webp"
+          <img *ngIf="vendorData.brand_photo == ''" src="https://www.goodyellowco.com/assets/imgs/default_gy.webp"
             class="img-fluid">
         </div>
       </div>
