--- a/src/app/component/signup-fifth/signup-fifth.component.html
+++ b/src/app/component/signup-fifth/signup-fifth.component.html
@@ -10,20 +10,12 @@
           <div style="border-bottom: 5px solid #FFE01D; width: 100%; margin: 0 auto;"></div>
 
           <p class="HeroNew fw-bold mt-4 mb-4 fs-6">
-            Since we don’t charge a transaction fee for Partners, we will not be actively promoting Good Yellow to
-            consumers in order to get them to come to Good Yellow and become Members. We will only be promoting Good
-            Yellow to small businesses. It is exclusively up to the Partners to promote their Good Yellow storefront,
-            specifically to their existing customers. We have over 300 small businesses (primarily that make and sell
-            products that are good for the planet and good for people) who will be signing in in August 2022 and will be
-            bringing their existing customers to Good Yellow. So you will have the chance of those consumers becoming
-            your customers.
-          </p>
-
-          <p class="HeroNew fw-bold mt-4 mb-4 fs-6" style="font-family: HeroNewExtraBlack !important;">
-            Thank you for taking the time to read this very important information. You can now start to create your Good
-            Yellow account and storefront.
+            Yes we partner with social media influencers to promote Good Yellow as a whole. While we don’t promote
+            individual Storefronts. All the while we still charge ZERO transaction and ZERO listing fees.
 
           </p>
+
+
 
 
           <p>&nbsp;</p>
