--- a/src/app/component/signup-first/signup-first.component.html
+++ b/src/app/component/signup-first/signup-first.component.html
@@ -13,24 +13,20 @@
             where you will create your Good Yellow account and storefront. Please be aware that this process will take a
             little bit of time but you can stop and come back to anything that you’ve saved.
 
+
           </p>
 
           <p class="HeroNew fw-bold mt-4 mb-4 fs-6">
             Before you start, please take time to read the VERY important information in the next 5 pages before you
             start creating your account and storefront.
 
-          </p>
-
-          <p class="HeroNew fw-bold mt-4 mb-4 fs-6">
-            We have over 300 small business Brands that have signed up for Good Yellow and will be working towards
-            climbing the Leaderboards and Leaderboard Lists (more on this below).
 
           </p>
 
           <p class="HeroNew fw-bold mt-4 mb-4 fs-6">
-            For small businesses the benefit of partnering with Good Yellow is on four levels. First, we charge ZERO
-            transaction fees, ZERO listing fees and we require ZERO revenue share from the cost that customers are
-            paying for their orders to Partners. This will save small businesses thousands of dollars or more per year.
+            We charge ZERO transaction fees and ZERO listing fees. This will save small businesses thousands of dollars
+            or more per year.
+
 
           </p>
 
@@ -40,6 +36,7 @@
             offers anything like our Leaderboard and Leaderboard Lists concept which provides small businesses with
             benefits that they won’t get on any other marketplace or ecommerce place online.
 
+
           </p>
 
           <p class="HeroNew fw-bold mt-4 mb-4 fs-6">
@@ -47,20 +44,20 @@
             directly from you, they pay you directly and even on their credit card statements, they will see your
             Brand’s name.
 
+
           </p>
 
           <p class="HeroNew fw-bold mt-4 mb-4 fs-6">
             Finally, we will have a 70/30 revenue share with our Partners from the small monthly or annual membership
             fee that our Members will be paying in order to shop on Good Yellow. 70% will go to our Partners (more on
-            this in later pages).
+            this in later pages). This revenue share applies only for Members who sign up with your promo code that
+            you’ll create when you make your account. This promo code gives anyone signing up with your promo code, a 30
+            day free trial.
+
 
           </p>
 
-          <p class="HeroNew fw-bold mt-4 mb-4 fs-6" style="font-family: HeroNewExtraBlack !important;">
-            The first Partner to have 100 different customers checkout from their Good Yellow storefront will win
-            $100,000!!!
 
-          </p>
 
           <p>&nbsp;</p>
 
