--- a/src/app/component/signup-fourth/signup-fourth.component.html
+++ b/src/app/component/signup-fourth/signup-fourth.component.html
@@ -14,15 +14,19 @@
             on your Good Yellow storefront for a few days. Because you already have the list of customers, all you have
             to do is email them the information about the discount and your Good Yellow storefront link. Your customers
             will have to become Good Yellow Members at $9 per month (or $39 per year) with the use of a promo code.
-            Since each product sold through storefronts on Good Yellow is required to have at least a 5% discount, Good
-            Yellow is a membership-based ecommerce destination. Just like Thrive Market or Costco but much cheaper,
-            exclusively for small businesses and a much more unique and better experience for consumers of discovering
-            Brands that fit with what they’re looking for in Brands (i.e the titles of Leaderboards).
+            Since
+            each product sold through storefronts on Good Yellow is required to have at least a 5% discount, Good Yellow
+            is a membership-based ecommerce destination. Just like Thrive Market or Costco but much cheaper, exclusively
+            for small businesses and a much more unique and better experience for consumers of discovering Brands that
+            fit with what they’re looking for in Brands (i.e the titles of Leaderboards).
+
 
           </p>
 
           <p class="HeroNew fw-bold mt-4 mb-4 fs-6">
-            This is where the 70%/30% revenue share will come from that we will be splitting with our Partners.
+            This is where the 70%/30% revenue share will come from that we will be splitting with our Partners who sign
+            up Members using their promo code.
+
 
           </p>
 
@@ -34,22 +38,10 @@
             is included in. This will give you another opportunity to grab the attention of consumers and Members
             towards your Storefront.
 
-          </p>
-
-          <p class="HeroNew fw-bold mt-4 mb-4 fs-6">
-            We will be launching for consumers on August 20, 2022. So between now and then, please start marketing your
-            upcoming and soon to be launched Good Yellow Storefront and the great discounts that you will be offering to
-            your existing customers. This way when we launch on August 20, 2022 for consumers, your customers will be
-            ready to place an order and you can climb all of the Leaderboards and Leaderboard Lists that you will be on,
-            much faster than other Partners and gain that great visibility from other consumers and Members.
 
           </p>
 
-          <p class="HeroNew fw-bold mt-4 mb-4 fs-6">
-            This method will also tremendously increase your chances of winning the $100,000 prize for being the first
-            Partner to have at least 100 different customers checkout from their Good Yellow storefront.
 
-          </p>
 
 
 
