--- a/src/app/component/signup-sixth/signup-sixth.component.html
+++ b/src/app/component/signup-sixth/signup-sixth.component.html
@@ -28,7 +28,8 @@
           <p>&nbsp;</p>
 
           <div class="d-grid gap-2 mx-auto col-2">
-            <a routerLink="/create-vendor-account" class="btn btn-warning fw-bold">Next</a>
+            <!-- <a routerLink="/create-vendor-account" class="btn btn-warning fw-bold">Next</a> -->
+            <a routerLink="/vendor/signup/seventh" class="btn btn-warning fw-bold">Next</a>
           </div>
 
           <p>&nbsp;</p>
