--- a/src/app/buyer/discountproduct/discountproduct.component.html
+++ b/src/app/buyer/discountproduct/discountproduct.component.html
@@ -33,8 +33,8 @@
         <h1 class="fw-bold fs-2 mt-3">
           ${{ discount_price }}
         </h1>
-        <h3 class="fw-bold fs-5">0 Sales</h3>
-        <h3 class="fw-bold fs-5">0 Different Customers</h3>
+        <!-- <h3 class="fw-bold fs-5">0 Sales</h3>
+        <h3 class="fw-bold fs-5">0 Different Customers</h3> -->
         <h3 *ngIf="product.exclu_discount" style="border-bottom: 4px solid #FFE01D; width: 230px;">Exclusive Good Yellow
           Discount </h3>
         <h3 *ngIf="product.exclus_product" style="margin-top: -14px; border-bottom: 4px solid #FFE01D; width: 200px;">
