--- a/src/app/component/discount-list-details-level-two/discount-list-details-level-two.component.html
+++ b/src/app/component/discount-list-details-level-two/discount-list-details-level-two.component.html
@@ -10,7 +10,13 @@
           <ul class="mt-4 text-left" *ngIf="discounts && discounts.length > 0">
             <li *ngFor="let item of discounts" class="text-left mb-2">
               <a style="text-align: left;" class="text-left btn btn-link text-dark text-decoration-none"
-                routerLink="/discount/list/details/level/three/{{ id }}/{{ item.Id }}/{{ min }}/{{ max }}">{{ item.lb_two_name }}</a>
+                routerLink="/discount/list/details/level/three/{{ id }}/{{ item.Id }}/{{ min }}/{{ max }}">{{ item.lb_two_name }}
+
+                <p class="mt-2 fw-bold text-secondary">( {{ item.category_name }} )</p>
+
+              </a>
+
+
 
 
 
@@ -36,9 +42,9 @@
                 Highest Discount: {{  item.ave_discount | number : '1.0-0' }}%
               </div>
 
-              <!-- <div class="text-secondary fs-6 font_family mt-2">
-                {{ item.buyers_no ?? 0 }} Subscribers
-              </div> -->
+              <div class="text-secondary fs-6 font_family mt-2">
+                {{ item.totalsubs ?? 0 }} Subscribers
+              </div>
 
 
 
