--- a/src/app/component/discount-list-details-level-three/discount-list-details-level-three.component.html
+++ b/src/app/component/discount-list-details-level-three/discount-list-details-level-three.component.html
@@ -10,7 +10,7 @@
           <ul class="mt-4 text-left" *ngIf="discounts && discounts.length > 0">
             <li *ngFor="let item of discounts" class="text-left mb-2">
               <a style="text-align: left;" class="text-left btn btn-link text-dark text-decoration-none"
-                routerLink="/leaderboard/brands/list/{{ item.slug }}/{{ min }}/{{ max }}">{{ item.lb_three_name }}
+                routerLink="/leaderboard/brands/list/{{ item.slug }}/{{ min }}/{{ item.ave_discount }}">{{ item.lb_three_name }}
 
                 <p class="mt-2 fw-bold text-secondary">( {{ item.category_name }} )</p>
               </a>
